k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-app
  namespace: two-tier

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
      - name: flask-app
        image: prasad3737/two-tier-flask-app:latest

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 300m
            memory: 512Mi
