k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql
  namespace: two-tier

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
      - name: mysql
        image: mariadb:10.6

        ports:
        - containerPort: 3306

        resources:
          requests:
            cpu: 50m
            memory: 128Mi

          limits:
            cpu: 200m
            memory: 256Mi

        livenessProbe:
          exec:
            command:
            - mysqladmin
            - ping
            - "-h"
            - localhost

          initialDelaySeconds: 60
          periodSeconds: 20

        readinessProbe:
          exec:
            command:
            - mysqladmin
            - ping
            - "-h"
            - localhost

          initialDelaySeconds: 40
          periodSeconds: 10
