k8s/flask-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service
  namespace: two-tier

spec:
  selector:
    app: flask-app

  ports:
  - port: 5000
    targetPort: 5000

  type: ClusterIP
